--- a/secure-cluster/share/secure/node1.nifi/nifi.properties
+++ b/secure-cluster/share/secure/node1.nifi/nifi.properties
@@ -126,7 +126,7 @@ nifi.components.status.repository.buffer.size=1440
 nifi.components.status.snapshot.frequency=1 min
 
 # Site to Site properties
-nifi.remote.input.host=node1.nifi
+nifi.remote.input.host=0.0.0.0
 nifi.remote.input.secure=true
 nifi.remote.input.socket.port=10443
 nifi.remote.input.http.enabled=true
@@ -146,7 +146,7 @@ nifi.web.http.network.interface.default=
 
 #############################################
 
-nifi.web.https.host=node1.nifi
+nifi.web.https.host=0.0.0.0
 nifi.web.https.port=9443
 nifi.web.https.network.interface.default=
 nifi.web.jetty.working.directory=./work/jetty
@@ -174,7 +174,7 @@ nifi.security.truststoreType=jks
 nifi.security.truststorePasswd=u+dF16kxIYu2Q+D8l0gQzr4j2mL0P+VjZYsyqKJEZ+4
 nifi.security.user.authorizer=managed-authorizer
 nifi.security.allow.anonymous.authentication=false
-nifi.security.user.login.identity.provider=
+nifi.security.user.login.identity.provider=kerberos-provider
 nifi.security.ocsp.responder.url=
 nifi.security.ocsp.responder.certificate=
 
