--- a/secure-single/nifi/nodes/node1.nifi/nifi.properties
+++ b/secure-single/nifi/nodes/node1.nifi/nifi.properties
@@ -48,7 +48,7 @@ nifi.state.management.provider.local=local-provider
 # The ID of the cluster-wide state provider. This will be ignored if NiFi is not clustered but must be populated if running in a cluster.
 nifi.state.management.provider.cluster=zk-provider
 # Specifies whether or not this instance of NiFi should run an embedded ZooKeeper server
-nifi.state.management.embedded.zookeeper.start=true
+nifi.state.management.embedded.zookeeper.start=false
 # Properties file that provides the ZooKeeper properties to use if <nifi.state.management.embedded.zookeeper.start> is set to true
 nifi.state.management.embedded.zookeeper.properties=./conf/zookeeper.properties
 
@@ -146,7 +146,7 @@ nifi.web.http.network.interface.default=
 
 #############################################
 
-nifi.web.https.host=node3.nifi
+nifi.web.https.host=0.0.0.0
 nifi.web.https.port=9443
 nifi.web.https.network.interface.default=
 nifi.web.jetty.working.directory=./work/jetty
@@ -167,11 +167,11 @@ nifi.sensitive.props.additional.keys=
 
 nifi.security.keystore=./conf/keystore.jks
 nifi.security.keystoreType=jks
-nifi.security.keystorePasswd=OTcMAf/6OwGqqxzAGN/u2JxhDexzBoNog8R1qZeNQ7Q
-nifi.security.keyPasswd=OTcMAf/6OwGqqxzAGN/u2JxhDexzBoNog8R1qZeNQ7Q
+nifi.security.keystorePasswd=X6asZxbPYdGcSZX/rdtfrSBb+x4okuDNxKPz5hoZ8ec
+nifi.security.keyPasswd=X6asZxbPYdGcSZX/rdtfrSBb+x4okuDNxKPz5hoZ8ec
 nifi.security.truststore=./conf/truststore.jks
 nifi.security.truststoreType=jks
-nifi.security.truststorePasswd=3CiYVkGhqjE4TvlDtxx8xbObNnng4ur5EQjs917MS1Q
+nifi.security.truststorePasswd=Io2rhIll/J1ypk3aVRg6SSrRO+Ok/L9UmrpPHDSepYo
 nifi.security.user.authorizer=managed-authorizer
 nifi.security.allow.anonymous.authentication=false
 nifi.security.user.login.identity.provider=kerberos-provider
@@ -238,8 +238,8 @@ nifi.cluster.protocol.heartbeat.missable.max=8
 nifi.cluster.protocol.is.secure=true
 
 # cluster node properties (only configure for cluster nodes) #
-nifi.cluster.is.node=true
-nifi.cluster.node.address=node3.nifi
+nifi.cluster.is.node=false
+nifi.cluster.node.address=node1.nifi
 nifi.cluster.node.protocol.port=11443
 nifi.cluster.node.protocol.threads=10
 nifi.cluster.node.protocol.max.threads=50
@@ -248,18 +248,18 @@ nifi.cluster.node.connection.timeout=5 sec
 nifi.cluster.node.read.timeout=5 sec
 nifi.cluster.node.max.concurrent.requests=100
 nifi.cluster.firewall.file=
-nifi.cluster.flow.election.max.wait.time=1 min
-nifi.cluster.flow.election.max.candidates=3
+nifi.cluster.flow.election.max.wait.time=5 mins
+nifi.cluster.flow.election.max.candidates=
 
 # cluster load balancing properties #
-nifi.cluster.load.balance.host=node3.nifi
+nifi.cluster.load.balance.host=
 nifi.cluster.load.balance.port=6342
 nifi.cluster.load.balance.connections.per.node=1
 nifi.cluster.load.balance.max.thread.count=8
 nifi.cluster.load.balance.comms.timeout=30 sec
 
 # zookeeper properties, used for cluster management #
-nifi.zookeeper.connect.string=node1.nifi:2181,node2.nifi:2181,node3.nifi:2181
+nifi.zookeeper.connect.string=
 nifi.zookeeper.connect.timeout=10 secs
 nifi.zookeeper.session.timeout=10 secs
 nifi.zookeeper.root.node=/nifi
@@ -282,15 +282,15 @@ nifi.zookeeper.kerberos.removeHostFromPrincipal=
 nifi.zookeeper.kerberos.removeRealmFromPrincipal=
 
 # kerberos #
-nifi.kerberos.krb5.file=
+nifi.kerberos.krb5.file=/share/krb/krb5.conf
 
 # kerberos service principal #
-nifi.kerberos.service.principal=
-nifi.kerberos.service.keytab.location=
+nifi.kerberos.service.principal=nifi/node1.nifi
+nifi.kerberos.service.keytab.location=/share/krb/nifi.keytab
 
 # kerberos spnego principal #
-nifi.kerberos.spnego.principal=
-nifi.kerberos.spnego.keytab.location=
+nifi.kerberos.spnego.principal=HTTP/node1.nifi
+nifi.kerberos.spnego.keytab.location=/share/krb/http-nifi.keytab
 nifi.kerberos.spnego.authentication.expiration=12 hours
 
 # external properties files for variable registry
